# RustPractice

./: Cargo.toml
examples/: Advent.md
examples/day1/: READ.md  main.rs
examples/day10/: READ.md  main.rs
examples/day11/: READ.md  main.rs
examples/day12/: main.rs
examples/day2/: READ.md  main.rs
examples/day3/: READ.md  main.rs
examples/day4 /: READ.md  main.rs
examples/day5/: READ.md  main.rs
examples/day6/: READ.md  main.rs
examples/day7/: READ.md  main.rs
examples/day8/: READ.md  main.rs
examples/day9/: READ.md  main.rs
src/: error.rs  iterator.rs  lib.rs  logging.rs  main.rs  read2.rs  study.rs  uniswap.rs  utils.rs  web_http.rs  web_hyper.rs  web_wss.rs
src/err/: anyhow.rs  errHandle0.rs  errHandle1.rs  errHandle2.rs  errHandle3.rs  errHandle4.rs  mod.rs  thisError.rs
src/format/: debug.rs
src/hex/: READ.md  mod.rs
src/idiomatic/: arguments.rs  avoidAllocate.rs  builder.rs  constructor.rs  iterating_over_option.rs  mod.rs
src/io/: READ.md  csv.rs  file.rs  json.rs  json0.rs  json1.rs  mod.rs  open.rs  path.rs  read2.rs
src/iterators/: iterator1.rs  mod.rs
src/learn/: method.rs
src/log/: mod.rs  tracing1.rs  tracing2.rs
src/rust-lang/: charter12.rs
src/threads/: block.rs  mod.rs  move.rs
src/time/: mod.rs
src/tokio/: block1.rs  http.rs  mod.rs  task.rs
src/traits/: clone.rs  display.rs  mod.rs
src/web/: mod.rs
