[package]
name = "deep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9"
chrono = "0.4"
url = "*"
json = "*"

# serde 
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.117"

# request webscoket
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# error handle
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }

# set more bin file, not use the default one.
# [[bin]]
# name = "run"
# path = "src/run.rs"
