[package]
name = "deep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
log = "0.4.0"
env_logger = "0.10"
chrono = "0.4"
url = "*"
json = "*"
derive-new = "0.5.8"
futures = "0.3"

simple_logger = "4.0.0"

atoi = "2"
itertools = "0.10"

# serde 
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.117"

# request webscoket
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# error handle
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
hyper = "0.14.24"
rand = "0.8.5"
eyre = "0.6.8"

# set more bin file, not use the default one.
# [[bin]]
# name = "run"
# path = "src/run.rs"

# Telemtry
yansi = "0.5.1"
ansi_term = "0.12.1"
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "ansi"] }

# structure
rustc-hash = "1.1"